cc_library(
    name = "codesupport",
    srcs = [
        "BitcodeParser.cpp",
    ],
    hdrs = [
        "BitcodeParser.hpp",
        "Fwd.hpp",
        "LLVMVersion.hpp",
    ],
    copts = ["-std=c++14"],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//chi/Support:support",
        "@llvm//:bit_reader",
    ],
)
