cc_library(
    name = "CodeSupport",
    srcs = [
        "BitcodeParser.cpp",
    ],
    hdrs = [
        "BitcodeParser.hpp",
        "Fwd.hpp",
        "LLVMVersion.hpp",
    ],
    copts = ["-std=c++14"],
    nocopts = "-std=c\\+\\+0x",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//chi/Support",
        "@llvm//:bit_reader",
    ],
)
