headers = [ 
    "FunctionValidator.hpp",
    "NodeCompiler.hpp",
    "NameMangler.hpp",
    "DataType.hpp",
    "ModuleCache.hpp",
    "GraphFunction.hpp",
    "ChiModule.hpp",
    "JsonSerializer.hpp",
    "Context.hpp",
    "NodeType.hpp",
    "FunctionCompiler.hpp",
    "Fwd.hpp",
    "GraphModule.hpp",
    "GraphStruct.hpp",
    "JsonDeserializer.hpp",
    "LangModule.hpp",
    "DefaultModuleCache.hpp",
    "NodeInstance.hpp",
    "CCompiler.hpp",
    "ClangFinder.hpp"
]

cc_library (
    name = "core_impl",
    srcs = [
        "Context.cpp",
        "NameMangler.cpp",
        "FunctionValidator.cpp",
        "GraphStruct.cpp",
        "JsonSerializer.cpp",
        "GraphFunction.cpp",
        "NodeType.cpp",
        "LangModule.cpp",
        "JsonDeserializer.cpp",
        "DefaultModuleCache.cpp",
        "ChiModule.cpp",
        "GraphModule.cpp",
        "NodeInstance.cpp",
        "FunctionCompiler.cpp",
        "DataType.cpp",
        "NodeCompiler.cpp",
        "CCompiler.cpp",
        "ClangFinder.cpp",
    ] + headers,
    nocopts = "-std=c\+\+0x",
    deps = [
        "//chi/Support:support", 
        "//chi/CodeSupport:codesupport",
        "//chi/Runtime:runtime",
        "@nlohmann_json//:json",
        "@boost//:uuid",
        "@boost//:bimap"
    ],
    linkopts = [
        "-lLLVM"
    ],
    visibility = ["//visibility:private"]
)

cc_inc_library (
    name = "core",
    hdrs = headers,
    visibility = ["//visibility:public"],
    deps = [":core_impl"]
)

cc_test (
    name = "core_test",
    srcs = [
        "ContextTests.cpp",
        "GraphFunctionEntryTest.cpp",
        "GraphFunctionExitTest.cpp",
        "GraphFunctionInOutsTest.cpp",
        "GraphFunctionLocalsTest.cpp",
        "GraphModuleTest.cpp",
        "JSONSerializerTests.cpp",
        "LangModuleTests.cpp",
        "NameManglerTests.cpp"
    ],
    nocopts = "-std=c\+\+0x",
    deps = [
        "@catch//:main",
        ":core",
        "//test:common",
    ]
)
