headers = [
    "FunctionValidator.hpp",
    "NodeCompiler.hpp",
    "NameMangler.hpp",
    "DataType.hpp",
    "ModuleCache.hpp",
    "GraphFunction.hpp",
    "ChiModule.hpp",
    "JsonSerializer.hpp",
    "Context.hpp",
    "NodeType.hpp",
    "FunctionCompiler.hpp",
    "Fwd.hpp",
    "GraphModule.hpp",
    "GraphStruct.hpp",
    "JsonDeserializer.hpp",
    "LangModule.hpp",
    "DefaultModuleCache.hpp",
    "NodeInstance.hpp",
    "CCompiler.hpp",
    "ClangFinder.hpp",
]

cc_library(
    name = "Core",
    srcs = [
        "Context.cpp",
        "NameMangler.cpp",
        "FunctionValidator.cpp",
        "GraphStruct.cpp",
        "JsonSerializer.cpp",
        "GraphFunction.cpp",
        "NodeType.cpp",
        "LangModule.cpp",
        "JsonDeserializer.cpp",
        "DefaultModuleCache.cpp",
        "ChiModule.cpp",
        "GraphModule.cpp",
        "NodeInstance.cpp",
        "FunctionCompiler.cpp",
        "DataType.cpp",
        "NodeCompiler.cpp",
        "CCompiler.cpp",
        "ClangFinder.cpp",
    ] + headers,
    nocopts = "-std=c\+\+0x",
    visibility = ["//visibility:public"],
    deps = [
        "//chi/CodeSupport",
        "//chi/Runtime",
        "//chi/Support",
        "@boost//:bimap",
        "@boost//:uuid",
        "@llvm//:asm_parser",
        "@llvm//:bit_writer",
        "@llvm//:core",
        "@llvm//:execution_engine",
        "@llvm//:linker",
        "@llvm//:x86_asm_parser",
        "@llvm//:x86_code_gen",
        "@llvm//:x86_info",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "Core_test",
    srcs = [
        "ContextTests.cpp",
        "GraphFunctionEntryTest.cpp",
        "GraphFunctionExitTest.cpp",
        "GraphFunctionInOutsTest.cpp",
        "GraphFunctionLocalsTest.cpp",
        "GraphModuleTest.cpp",
        "JSONSerializerTests.cpp",
        "LangModuleTests.cpp",
        "NameManglerTests.cpp",
    ],
    nocopts = "-std=c\+\+0x",
    deps = [
        ":Core",
        "//test:common",
        "@catch//:main",
    ],
)
