cc_library(
    name = "debugger_impl",
    srcs = ["Debugger.cpp"],
    hdrs = ["Debugger.hpp"],
    linkopts = [
        "-llldb",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//chi/CodeSupport",
        "//chi/Core",
        "@boost//:uuid",
    ],
)

cc_inc_library(
    name = "debugger",
    hdrs = ["Debugger.hpp"],
    visibility = ["//visibility:public"],
    deps = [":debugger_impl"],
)

cc_test(
    name = "debugger_test",
    srcs = ["DebuggerTests.cpp"],
    data = [
        "//cmd/chi",
        "//test/codegen:workspace",
    ],
    deps = [
        ":debugger",
        "//test:common",
        "@catch//:main",
    ],
)
