cc_library(
    name = "fetcher_impl",
    srcs = ["Fetcher.cpp"],
    hdrs = ["Fetcher.hpp"],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "//chi/Support:support",
        "@libgit2//:git2",
    ],
)

cc_inc_library(
    name = "fetcher",
    hdrs = ["Fetcher.hpp"],
    visibility = [
        "//visibility:public",
    ],
    deps = [":fetcher_impl"],
)

cc_test(
    name = "fetcher_test",
    srcs = ["FetcherTests.cpp"],
    deps = [
        ":fetcher",
        "//test:common",
        "@catch//:main",
    ],
)
