cc_library(
    name = "fetcher_impl",
    srcs = ["Fetcher.cpp"],
    hdrs = ["Fetcher.hpp"],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        "//chi/Support",
        "@libgit2//:git2",
    ],
)

cc_inc_library(
    name = "Fetcher",
    hdrs = ["Fetcher.hpp"],
    visibility = [
        "//visibility:public",
    ],
    deps = [":fetcher_impl"],
)

cc_test(
    name = "Fetcher_test",
    srcs = ["FetcherTests.cpp"],
    deps = [
        ":Fetcher",
        "//test:common",
        "@catch//:main",
    ],
)
