headers = [
    "LibCLocator.hpp",
    "Fwd.hpp",
    "HashUuid.hpp",
    "Subprocess.hpp",
    "Result.hpp",
    "HashFilesystemPath.hpp",
    "Flags.hpp",
    "ExecutablePath.hpp"
]

cc_library (
    name = "support_impl",
    srcs = [
        "LibCLocator.cpp",
        "Result.cpp",
        "Subprocess.cpp",
        "ExecutablePath.cpp"
    ] + headers,
    nocopts = "-std=c\+\+0x",
    visibility = ["//visibility:private"],
    linkopts = ["-lpthread"],
    deps = [
        "@nlohmann_json//:json",
        "@boost//:filesystem",
        "@boost//:container",
        "@boost//:algorithm",
        "@boost//:dynamic_bitset"
    ]
)

cc_inc_library (
    name = "support",
    hdrs = headers,
    visibility = ["//visibility:public"],
    deps = [
        ":support_impl"
    ]
)

cc_binary (
    name = "subprocesstesterchild",
    srcs = [
        "SubprocessTesterChild.cpp"
    ],
    testonly = 1,
)

cc_test (
    name = "support_test",
    srcs = [
        "ResultTest.cpp",
        "SubprocessTest.cpp"
    ],
    deps = [
        ":support",
        "@catch//:main",
        "//test:common",
    ],
    data = [
        ":subprocesstesterchild"
    ],
)
