headers = [
    "LibCLocator.hpp",
    "Fwd.hpp",
    "HashUuid.hpp",
    "Subprocess.hpp",
    "Result.hpp",
    "HashFilesystemPath.hpp",
    "Flags.hpp",
    "ExecutablePath.hpp",
]

cc_library(
    name = "Support",
    srcs = [
        "LibCLocator.cpp",
        "Result.cpp",
        "Subprocess.cpp",
        "ExecutablePath.cpp",
    ] + headers,
    linkopts = ["-lpthread"],
    nocopts = "-std=c\+\+0x",
    visibility = ["//visibility:public"],
    deps = [
        "@boost//:algorithm",
        "@boost//:container",
        "@boost//:dynamic_bitset",
        "@boost//:filesystem",
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "subprocesstesterchild",
    testonly = 1,
    srcs = [
        "SubprocessTesterChild.cpp",
    ],
)

cc_test(
    name = "Support_test",
    srcs = [
        "ResultTest.cpp",
        "SubprocessTest.cpp",
    ],
    data = [
        ":subprocesstesterchild",
    ],
    deps = [
        ":Support",
        "//test:common",
        "@catch//:main",
    ],
)
