cc_binary(
    name = "chi",
    srcs = [
        "main.cpp",
        "compile.cpp",
#        "get_nop.cpp",
        "get.cpp",
        "interpret.cpp",
        "run.cpp"
    ],    
    nocopts = "-std=c\+\+0x",
    deps = [
        "//chi/Core:core",
        "//chi/Support:support",
        "//chi/CodeSupport:codesupport",
        "//chi/Fetcher:fetcher",
        "@boost//:program_options"
    ],
    visibility = [
        "//visibility:public"
    ]
)
