cc_binary(
    name = "chi",
    srcs = [
        "main.cpp",
        "compile.cpp",
        #        "get_nop.cpp",
        "get.cpp",
        "interpret.cpp",
        "run.cpp",
    ],
    nocopts = "-std=c\+\+0x",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//chi/CodeSupport:codesupport",
        "//chi/Core:core",
        "//chi/Fetcher:fetcher",
        "//chi/Support:support",
        "@boost//:program_options",
        "@llvm//:aarch64_info",
        "@llvm//:interpreter",
        "@llvm//:ipo",
        "@llvm//:ir_reader",
        "@llvm//:mcjit",
        "@llvm//:selection_dag",
    ],
)
